Address IntelliJ Inspect Code findings
Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>